--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,17 +95,6 @@ ul {
     padding-bottom: 6px;
 }
 
-
-.cards-container{
-    width: inherit;
-    display: grid;
-    grid-template-columns: auto;
-    column-gap: 25px;
-    row-gap: 20px;
-    padding: 30px;
-    overflow-y: scroll;
-}
-
 .grid-item{
     width: auto;
     height: auto;
@@ -114,7 +103,8 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 16px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     }
 
 .grid-item img{
@@ -146,33 +136,43 @@ ul {
 
 .principal{
     grid-area: a-principal;
-    display: grid;
-    grid-template-areas: 
-    'cards'
-    'paginacion';
-    grid-template-rows:auto 60px;
-    overflow-y: scroll;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height:calc(100vh - 80px - 60px - 70px);
 }
 
 .cards-container{
     grid-area: cards;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    column-gap: 20px;
+    justify-content: center;
+    padding: 30px;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 .paginacion-container{
+    flex: 0 0 80px;
     grid-area: paginacion;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
     justify-content: center;
+    flex-direction: row;
 }
 
 .paginacion{
+
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 16px;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .paginacion li{
@@ -227,16 +227,23 @@ ul {
 
 @media (min-width: 576px)
 {
-    .cards-container{
-        width: inherit;
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        column-gap: 25px;
-        row-gap: 20px;
-        padding: 30px;
-        overflow-y: scroll;
+
+    .principal{
+        height:calc(100vh - 70px);
     }
 
+    .cards-container{
+        grid-area: cards;
+        padding: 30px;
+        display: flex;
+    }
+
+    .grid-item{
+        width: calc((100% - 60px)/4);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        }
 
     .grid-container{
         height: 100vh;
